Change status badge from absolute position to a flex element to prevent overlap with icons

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -744,12 +744,8 @@ i.fa-times.delete:hover {
 
 .gn-search-page {
   .gn-status {
-    bottom: 9px;
     margin-left: -8px;
     z-index: 98;
-  }
-  [data-search-results] .gn-status {
-    position: absolute;
   }
   [data-search-results] table .gn-status {
     position: unset;
@@ -775,6 +771,8 @@ i.fa-times.delete:hover {
     font-weight: 500;
     font-size: 80%;
     color: #fff;
+    flex-grow: 0;
+    align-self: center;
   }
   .gn-status-mdview,
   .gn-workflow-status-mdview {
